--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,9 @@
     "jquery": "^2.2.4",
     "bootstrap": "^3.3.6",
     "jquery-svg": "^1.5.0",
-    "mustache.js": "mustache#^2.2.1"
+    "mustache.js": "mustache#^2.2.1",
+    "requirejs": "^2.2.0",
+    "r.js": "^2.2.0",
+    "domReady": "^2.0.1"
   }
 }
